# aiodinweb

./: .editorconfig  .gitignore  .landscape.yml  .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py
aiodinweb/: aiohttp.py  api.py  bases.py  constants.py  containers.py  content_type_resolvers.py  cors.py  data_structures.py  decorators.py  exceptions.py  json_schema.py  openapi.py  operation.py  resources.py  web.py
aiodinweb/middleware/: __init__.py
aiodinweb/static-ui/: bundle.js  standalone-preset.js  ui.css  ui.html
aiodinweb/utils/: __init__.py  sequences.py
example/: __main__.py  api.py
tests/: test_constants.py  test_data_structures.py
tests/utils/: test_sequences.py
