[metadata]
name = aiodinweb
author = Tim Savage
author_email = tim@savage.company
summary = Toolkit for building web API's using Odin and `aiohttp`.
description-file = README.rst
home-page = https://github.com/python-odin/aiodinweb
license = BSD
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    web
    api
    restful
    OpenAPI

[files]
packages =
    aiodinweb
data_files =
    static = static-ui/*

[flake8]
max_line_length = 119
exclude = tests
